Added in Retrolambda and RxBinding (built on RxAndroid, RxJava) to remove listeners for observable actions.